@@ -1,5 +1,10 @@
 2007-02-01  Neil Jagdish Patel  <njp@Fedora>
 
+	* src/awn-task.c: Added mouse-hover effects
+	* src/awn-title.c: (_position_window): Raise window by 5px.
+
+2007-02-01  Neil Jagdish Patel  <njp@Fedora>
+
 	* src/awn-task-manager.c:
 	* src/awn-task.c: Added effect support.
 
